tests/baselines/reference/objectLiteralsAgainstUnionsOfArrays01.errors.txt
objectLiteralsAgainstUnionsOfArrays01.ts(9,16): error TS2322: Type '{ bar: { prop: number; }; }[]' is not assignable to type 'Foo[]'.
  Types of property 'bar' are incompatible.
    Type '{ prop: number; }' is not assignable to type 'Bar | Bar[]'.
      Types of property 'prop' are incompatible.
        Type 'number' is not assignable to type 'string'.


==== objectLiteralsAgainstUnionsOfArrays01.ts (1 errors) ====
    interface Foo {
      bar: Bar | Bar[];
    }
    
    interface Bar {
      prop: string;
    }
    
    let x: Foo[] = [
                   ~
      { bar: { prop: 100 } }
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ]
    ~
!!! error TS2322: Type '{ bar: { prop: number; }; }[]' is not assignable to type 'Foo[]'.
!!! error TS2322:   Types of property 'bar' are incompatible.
!!! error TS2322:     Type '{ prop: number; }' is not assignable to type 'Bar | Bar[]'.
!!! error TS2322:       Types of property 'prop' are incompatible.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
    